--- a/src/styles/Property.css
+++ b/src/styles/Property.css
@@ -13,7 +13,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 24px;
-    /* place-items: center; */
+    position: relative;
+    z-index: 1;
     
 }
 
@@ -60,8 +61,6 @@
     align-items: center;
     gap : 5px;
     font-family: 'Fira Code', monospace;
-    /* letter-spacing: .1rem; */
-    /* border-bottom-left-radius: .51rem; */
 }
 
 .badge::after {
@@ -72,12 +71,8 @@
     top: 9px;
     width: 7px;
     height: 20px;
-    /* background-blend-mode: darken; */
-    /* transform: rotate(30.00028deg); */
     background: linear-gradient(#5a4dea, #5347a4);
-    /* background-color: #7265ef; */
     border-bottom-left-radius: 10rem;
-    /* border-right: .1px solid black; */
     box-sizing: border-box;
 }
 
@@ -105,7 +100,6 @@
     margin-top: 12px;
     font-weight: 700;
     font-size: 18px;
-    /* background-color: #757575; */
     min-height: 48px;
     display: flex;
     align-items: center;
@@ -119,7 +113,6 @@
     margin-top: 5px;
     margin-bottom: 10px;
     color: #757575;
-    /* background-color: black; */
     height: 32px;
     align-items: center;
 }
@@ -132,7 +125,6 @@
     grid-template-columns: auto auto auto;
     place-items: center;
     margin-top: 12px;
-    /* padding: 0 2px; */
     gap: 5px;
 }
 
@@ -140,7 +132,6 @@
     display: flex;
     gap: 3px;
     align-items: center;
-    /* justify-content: center ; */
 }
 .cardFooter .cardFooterIcons {
     color : #7268ED;
@@ -153,10 +144,28 @@
     gap : 10px;
 }
 
+.setLoading {
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loadingSvg {
+    position: fixed;
+    left : 47%;
+    top : 50%
+}
+
 @media (max-width : 1290px) {
     .cardContainer {
         grid-template-columns: 1fr 1fr 1fr;
     }
+    .loadingSvg {
+        left: 45.8%;
+    }   
 }
 
 @media (max-width : 1080px) {
@@ -166,7 +175,10 @@
     }
     .cardContainer {
         place-items: center;
-    }    
+    }
+    .loadingSvg {
+        left: 45%;
+    }   
 }
 
 @media (max-width : 980px) {
@@ -217,6 +229,10 @@
     .badge {
         top : 285px;
     }
+    .loadingSvg {
+        left: 40%;
+        top: 70%;
+    }
 }
 
 @media (max-width : 320px) {
@@ -224,7 +240,6 @@
         width: 100%;
     }
     .card .cardFooter {
-        /* color : #7268ED; */
         font-size: 8px;
         transform: scale(1.15,1.15);
     }
